<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.ChooseFeature">

    <Button
        android:id="@+id/btnPromo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnQr"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="10dp"
        android:text="@string/lbl_btn_promo"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnQr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/lbl_btn_qr"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPromo"/>

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnQr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:background="@drawable/bg_rounded"
        android:text="@string/lbl_history_transaksi"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>